--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,22 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
+.idea/
+#.idea/modules.xml
+#.idea/jarRepositories.xml
+#.idea/compiler.xml
+#.idea/libraries/
+.gradle
+settings.gradle/
+gradlew
+gradlew.bat
+build.gradle.kts
+gradle.properties
+settings.gradle.kts
+gradle/
+build/
+*.log
 *.iws
 *.iml
 *.ipr
