--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ settings.gradle/
 #gradlew
 #gradlew.bat
 #build.gradle.kts
-gradle.properties
+#gradle.properties
 settings.gradle.kts
 #gradle/
 build/
